--- a/codigo-fonte/relatorio-vendas.html
+++ b/codigo-fonte/relatorio-vendas.html
@@ -1,74 +1,152 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="UTF-8"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="UTF-8" ></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/relatorio-vendas.css">
+  <link rel="stylesheet" href="css/relatorio-financeiro.css">
   <script src="scripts/scripts.js" type="text/javascript"></script>
 
-
+ 
   <title>Titron - Relatório</title>
 </head>
-
 <body>
-  <header>
-    <nav>
+    <header>
+      <nav>
+        </div>
+        <div class="side-bar active">
+          <div class="menu">
+            <div class="item"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
+            <div class="item"><a href="pdv.html"><i class="bi bi-basket2"></i>PDV</a></div>
+            <div class="item"><a href="estoque.html"><i class="bi bi-upc-scan"></i>Estoque</a></div>
+            <div class="item">
+              <a class="sub-btn"><i class="bi bi-cash"></i>Caixa<i class="bi bi-caret-right-fill dropdown"></i></a>
+              <div class="sub-menu">
+                <a href="caixa-lancamento.html" class="sub-item">Lançamentos</a>
+                <a href="caixa-sangria.html" class="sub-item">Sangria</a>
+                <a href="caixa-fechamento.html" class="sub-item">Fechamento</a>
+              </div>
+            </div>
+            <div class="item">
+              <a class="sub-btn relatorio"><i class="bi bi-bar-chart-fill"></i>Relatório<i class="bi bi-caret-right-fill dropdown"></i></a>
+              <div class="sub-menu">
+                <a class="sub-item">Financeiro</a>
+                <a href="relatorio-vendas.html" class="sub-item">Vendas</a>
+                <a href="relatorio-comodato.html" class="sub-item">Comodato</a>
+              </div>
+            </div>
+            <div class="item"><a href="configuracao.html"><i class="bi bi-gear"></i>Configurações</a></div>
+            <div class="item">
+                <a class="sub-btn"><i class="bi bi-person-circle"></i>Conta<i class="bi bi-caret-right-fill dropdown"></i></a>
+                <div class="sub-menu">
+                  <a href="usuario-gerenciar.html" class="sub-item">Gerenciar</a>
+                  <a href="index.html" class="sub-item">Sair</a>
+                </div>
+              </div>
+        </div>
+        </div>
+
+      </nav>
+    </header>
+    <div class="cabecalho">
+      <h1>Relatório - Financeiro</h1>
+      <div class="tagusuario">
+        <i class="bi bi-person-circle"></i>
+        <label ><span id="tagusuario"></span></label>     
       </div>
-      <div class="side-bar active">
-        <div class="menu">
-          <div class="item"><a href="home.html"><i class="bi bi-house"></i>Home</a></div>
-          <div class="item"><a href="pdv.html"><i class="bi bi-basket2"></i>PDV</a></div>
-          <div class="item"><a href="estoque.html"><i class="bi bi-upc-scan"></i>Estoque</a></div>
-          <div class="item">
-            <a class="sub-btn"><i class="bi bi-cash"></i>Caixa<i class="bi bi-caret-right-fill dropdown"></i></a>
-            <div class="sub-menu">
-              <a href="caixa-lancamento.html" class="sub-item">Lançamentos</a>
-\              <a href="caixa-fechamento.html" class="sub-item">Fechamento</a>
-            </div>
-          </div>
-          <div class="item">
-            <a class="sub-btn relatorio"><i class="bi bi-bar-chart-fill"></i>Relatório<i
-                class="bi bi-caret-right-fill dropdown"></i></a>
-            <div class="sub-menu ">
-              <a href="relatorio-financeiro.html" class="sub-item">Financeiro</a>
-              <a class="sub-item">Vendas</a>
-              <a href="relatorio-comodato.html" class="sub-item">Comodato</a>
-            </div>
-          </div>
-          <div class="item"><a href="configuracao.html"><i class="bi bi-gear"></i>Configurações</a></div>
-          <div class="item">
-            <a class="sub-btn"><i class="bi bi-person-circle"></i>Conta<i
-                class="bi bi-caret-right-fill dropdown"></i></a>
-            <div class="sub-menu">
-              <a href="usuario-gerenciar.html" class="sub-item">Gerenciar</a>
-              <a href="index.html" class="sub-item">Sair</a>
-            </div>
-          </div>
+    </div>
+    <div class="corpo">
+      <div class="tabelarelfinan divcorpo">
+        <div class="boxrelfinan divcorpo">
+          <form action="">
+            <fieldset class="fieldsetrelfinan">
+              <br>
+              <div class="inputBox-relfinan">
+                <label for="dataini" class="labelInput-relfinan">Data Inicial:</label>
+                <input type="date" name="dataini" id="dataini" class="inputUser-relfinan" required>
+              </div>
+              <br>
+              <br>
+              <div class="inputBox-relfinan">
+                <label for="dataini" class="labelInput-relfinan">Data Inicial:</label>
+                <input type="date" name="dataini" id="dataini" class="inputUser-relfinan" required>
+              </div>
+              <div class="inputBox-relfinan">
+                <input type="radio" name="comodato" id="comodato" class="radio-venda" >
+                <label for="comodato" class="labelInput-pdv">Entrada</label>
+                <input type="radio" name="comodato" id="venda" class="radio-comodato" >
+                <label for="comodato" class="labelInput-pdv">Saida</label>
+              </div>
+              <br>
+              <input type="submit" name="submit" value="Pesquisar" id="submit-relfinan">
+            </fieldset>
+          </form>
+        </div>
+        <table class="tabelavendas">
+          <thead>
+            <tr class="tabcabeca">
+              <th id="data">Data da Operação</th>
+              <th id="valor">Valor</th>
+              <th id="user">Usuário</th>
+              <th id="tipo">Tipo de Operação</th>
+              <th id="acao">Ação</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>10/05/2024</td>
+              <td>R$ 200,00</td>
+              <td>fulano</td>
+              <td>Saida</td>
+              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+            </tr>
+            <tr>
+              <td>10/05/2024</td>
+              <td>R$ 200,00</td>
+              <td>fulano</td>
+              <td>Saida</td>
+              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+            </tr>
+            <tr>
+              <td>10/05/2024</td>
+              <td>R$ 200,00</td>
+              <td>fulano</td>
+              <td>Saida</td>
+              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+            </tr>
+            <tr>
+              <td>10/05/2024</td>
+              <td>R$ 200,00</td>
+              <td>fulano</td>
+              <td>Saida</td>
+              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+            </tr>
+            <tr>
+              <td>10/05/2024</td>
+              <td>R$ 200,00</td>
+              <td>fulano</td>
+              <td>Saida</td>
+              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+            </tr>
+ 
+          </tbody>
+        </table>
+        <div class="boxresultado">
+          <form action="">
+            <fieldset class="fieldsetrelfinan">
+              <br>
+              <div class="inputBox-relfinan">
+                <label for="dataini" class="labelInput-relfinan">Valor Total: R$ 1.200,00</label>
+              <br>
+            </fieldset>
+          </form>
         </div>
       </div>
 
-    </nav>
-  </header>
-  <div class="cabecalho">
-    <h1>Relatório - Vendas</h1>
-    <div class="tagusuario">
-      <i class="bi bi-person-circle"></i>
-      <label><span id="tagusuario"></span></label>
     </div>
-  </div>
-  <div class="corpo">
-      
 
-  </div>
-
-
-
-
-</body>
-
-</html>
+    </div>
+   
