--- a/codigo-fonte/relatorio-vendas.html
+++ b/codigo-fonte/relatorio-vendas.html
@@ -7,11 +7,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" charset="UTF-8" ></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/relatorio-financeiro.css">
+  <link rel="stylesheet" href="css/relatorio-vendas.css">
   <script src="scripts/scripts.js" type="text/javascript"></script>
 
  
-  <title>Nexum - Relatório</title>
+  <title>Titron - Relatório</title>
 </head>
 <body>
     <header>
@@ -52,94 +52,91 @@
       </nav>
     </header>
     <div class="cabecalho">
-      <h1>Relatório - Financeiro</h1>
+      <h1>Relatório - Vendas</h1>
       <div class="tagusuario">
         <i class="bi bi-person-circle"></i>
         <label ><span id="tagusuario"></span></label>     
       </div>
     </div>
     <div class="corpo">
-      <div class="tabelarelfinan divcorpo">
-        <div class="boxrelfinan divcorpo">
+      <div class="tabelarelvendas divcorpo">
+        <div class="boxrelvendas divcorpo">
           <form action="">
-            <fieldset class="fieldsetrelfinan">
+            <fieldset class="fieldsetrelvendas">
               <br>
-              <div class="inputBox-relfinan">
-                <label for="dataini" class="labelInput-relfinan">Data Inicial:</label>
-                <input type="date" name="dataini" id="dataini" class="inputUser-relfinan" required>
+              <div class="inputBox-relvendas">
+                <label for="dataini" class="labelInput-relvendas">Data Inicial:</label>
+                <input type="date" name="dataini" id="dataini" class="inputUser-relvendas" required>
               </div>
               <br>
               <br>
-              <div class="inputBox-relfinan">
-                <label for="dataini" class="labelInput-relfinan">Data Inicial:</label>
-                <input type="date" name="dataini" id="dataini" class="inputUser-relfinan" required>
+              <div class="inputBox-relvendas">
+                <label for="dataini" class="labelInput-relvendas">Data Inicial:</label>
+                <input type="date" name="dataini" id="dataini" class="inputUser-relvendas" required>
               </div>
-              <div class="inputBox-relfinan">
-                <input type="radio" name="comodato" id="comodato" class="radio-venda" >
-                <label for="comodato" class="labelInput-pdv">Entrada</label>
-                <input type="radio" name="comodato" id="venda" class="radio-comodato" >
-                <label for="comodato" class="labelInput-pdv">Saida</label>
+              <div class="inputBox-relvendas">
+                <label for="produto" class="labelInput-relvendas">Produto:</label>
+                <input type="text" name="produto" id="produto" class="inputUser-relvendas" required>
               </div>
               <br>
-              <input type="submit" name="submit" value="Pesquisar" id="submit-relfinan">
+              <input type="submit" name="submit" value="Pesquisar" id="submit-relvendas">
             </fieldset>
           </form>
         </div>
         <table class="tabelavendas">
           <thead>
             <tr class="tabcabeca">
-              <th id="data">Data da Operação</th>
+              <th id="data">Data da Venda</th>
               <th id="valor">Valor</th>
+              <th id="user">Produto</th>
               <th id="user">Usuário</th>
-              <th id="tipo">Tipo de Operação</th>
-              <th id="acao">Ação</th>
+
             </tr>
           </thead>
           <tbody>
             <tr>
               <td>10/05/2024</td>
               <td>R$ 200,00</td>
-              <td>fulano</td>
-              <td>Saida</td>
-              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+              <td>Produto da venda do caixa</td>
+              <td>Fulano de tal</td>
+
             </tr>
             <tr>
               <td>10/05/2024</td>
               <td>R$ 200,00</td>
-              <td>fulano</td>
-              <td>Saida</td>
-              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+              <td>Produto da venda do caixa</td>
+              <td>Fulano de tal</td>
+
             </tr>
             <tr>
               <td>10/05/2024</td>
               <td>R$ 200,00</td>
-              <td>fulano</td>
-              <td>Saida</td>
-              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+              <td>Produto da venda do caixa</td>
+              <td>Fulano de tal</td>
+
             </tr>
             <tr>
               <td>10/05/2024</td>
               <td>R$ 200,00</td>
-              <td>fulano</td>
-              <td>Saida</td>
-              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+              <td>Produto da venda do caixa</td>
+              <td>Fulano de tal</td>
+
             </tr>
             <tr>
               <td>10/05/2024</td>
               <td>R$ 200,00</td>
-              <td>fulano</td>
-              <td>Saida</td>
-              <td><i class="bi bi-trash-fill" id="botaodelete"></i><i class="bi bi-pencil-square" id="botaoedit"></i></td>
+              <td>Produto da venda do caixa</td>
+              <td>Fulano de tal</td>
             </tr>
  
           </tbody>
         </table>
         <div class="boxresultado">
           <form action="">
-            <fieldset class="fieldsetrelfinan">
+            <fieldset class="fieldsetrelvendas">
               <br>
-              <div class="inputBox-relfinan">
-                <label for="dataini" class="labelInput-relfinan">Valor Total: R$ 1.200,00</label>
+              <div class="inputBox-relvendas">
+                <label for="dataini" class="labelInput-relvendas">Valor Total: R$ 1.200,00</label>
               <br>
             </fieldset>
           </form>
@@ -149,4 +146,3 @@
     </div>
 
     </div>
-   
